feat: Fix failign response after creating event
